# fastmrz

./: CODE_OF_CONDUCT.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql.yml
fastmrz/: __init__.py  cli.py  fastmrz.py  main.py
scripts/: Laghima.py  fastmrz.py  main.py
tests/: test.py
